syntax = "proto3";

package pha;

//设备控制
message CallReq{
  string message = 1;
  string home = 2;

}

message CallRsp{
  int32 code = 1;
  string msg = 2;
}

message speakerData{
  string Role = 1;
  string content = 2;
}

message SpeakerReq{
  repeated speakerData Messages = 1;
}

message SpeakerRsp{
  int32 code = 1;
  string msg = 2;
  string result = 3;
}

//获取指令集
message ServicesReq{
}

message servicesData{
  string services = 1;
}

message ServicesRsp{
  int32 code = 1;
  string msg = 2;
  servicesData data = 3;
}

//获取当前设备列表和状态
message StatesReq{

}

message statesData{
  string states = 1;
}

message StatesRsp{
  int32 code = 1;
  string msg = 3;
  statesData data = 2;
}

service llm{
  rpc Call(CallReq)returns (CallRsp);
  rpc Speaker(SpeakerReq)returns (SpeakerRsp);
  rpc Services(ServicesReq)returns(ServicesRsp);
  rpc States(StatesReq)returns(StatesRsp);
}
